--- a/package.json
+++ b/package.json
@@ -1,82 +1,68 @@
 {
 	"name": "mrm-preset-agnostic",
-	"description": "Starter (Forkable) CodeMods approach to config management Cloud Native Projects",
-	"homepage": "https://github.com/sotekton/agnostic-mrm#readme",
 	"version": "0.1.0",
-	"main": "config.json",
-	"author": {
-		"name": "Sotekton",
-		"url": "https://sotekton.com"
+	"description": "Starter (Forkable) CodeMods approach to config management Cloud Native Projects",
+	"keywords": [
+		"agnostic",
+		"mrm",
+		"mrm-task",
+		"sotekton"
+	],
+	"homepage": "https://github.com/sotekton/agnostic-mrm#readme",
+	"bugs": {
+		"url": "https://github.com/sotekton/agnostic-mrm/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/sotekton/agnostic-mrm.git"
 	},
-	"bugs": {
-		"url": "https://github.com/sotekton/agnostic-mrm/issues"
-	},
-	"keywords": [
-		"cloud",
-		"mrm",
-		"mrm-task",
-		"native",
-		"sotekton"
-	],
-	"dependencies": {
-		"editorconfig-to-prettier": "0.1.1",
-		"execa": "1.0.0",
-		"fastest-validator": "0.6.12",
-		"finepack": "2.8.2",
-		"get-installed-path": "^4.0.8",
-		"git-label": "^4.1.1",
-		"git-username": "^1.0.0",
-		"is-installed": "^2.0.1",
-		"mkdirp": "^0.5.1",
-		"mrm-core": "3.3.0",
-		"mrm-task-editorconfig": "1.1.0",
-		"mrm-task-prettier": "1.2.5",
-		"npm-install-global": "^1.0.0",
-		"npm-install-package": "^2.1.0",
-		"ora": "3.0.0",
-		"per-env": "^1.0.2",
-		"redrun": "7.0.3",
-		"upath": "1.1.0",
-		"user-meta": "^1.0.0"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "7.2.1",
-		"@commitlint/config-conventional": "7.1.2",
-		"@commitlint/lint": "7.2.1",
-		"@commitlint/prompt-cli": "7.2.1",
-		"chuhai": "^1.2.0",
-		"clear-require": "3.0.0",
-		"codecov": "3.1.0",
-		"commentizer": "1.0.17",
-		"husky": "^1.2.0",
-		"jsdoc": "^3.5.5",
-		"lint-staged": "8.1.0",
-		"nyc": "13.1.0",
-		"prettier": "1.15.2",
-		"xo": "0.23.0"
-	},
-	"engines": {
-		"node": ">=8"
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "sotekton",
+		"url": "https://sotekton.com"
 	},
 	"files": [
 		"*/index.js",
 		"config.json"
 	],
+	"main": "config.json",
 	"scripts": {
 		"commit": "commit",
 		"format": "redrun -p format:*",
 		"format:prettier": "prettier --write '**/*.{css,md}'",
-		"format:xo": "xo ./**/*.js"
+		"format:xo": "xo ./**/*.js",
+		"update": "updates --update; sort-package-json; prettier --write package.json"
 	},
-	"license": "SEE LICENSE IN LICENSE",
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -e $GIT_PARAMS"
+		}
+	},
 	"commitlint": {
 		"extends": [
 			"@commitlint/config-conventional"
 		]
+	},
+	"lint-staged": {
+		"ignore": [
+			"CHANGELOG.md"
+		],
+		"linters": {
+			"*.{js}": [
+				"prettier --write",
+				"xo",
+				"git add"
+			],
+			"*.{css,md}": [
+				"prettier --write",
+				"git add"
+			],
+			"package.json": [
+				"sort-package-json",
+				"git add"
+			]
+		}
 	},
 	"xo": {
 		"globals": [
@@ -96,25 +82,43 @@
 		},
 		"semicolon": false
 	},
-	"lint-staged": {
-		"linters": {
-			"*.{js}": [
-				"xo",
-				"git add"
-			],
-			"*.{css,md}": [
-				"prettier --write",
-				"git add"
-			]
-		},
-		"ignore": [
-			"CHANGELOG.md"
-		]
+	"dependencies": {
+		"editorconfig-to-prettier": "0.1.1",
+		"execa": "1.0.0",
+		"fastest-validator": "0.6.12",
+		"finepack": "2.8.2",
+		"get-installed-path": "4.0.8",
+		"git-label": "4.1.1",
+		"git-username": "1.0.0",
+		"is-installed": "2.0.1",
+		"mkdirp": "0.5.1",
+		"mrm-core": "3.3.0",
+		"mrm-task-editorconfig": "1.1.0",
+		"mrm-task-prettier": "1.2.5",
+		"npm-install-global": "1.0.0",
+		"npm-install-package": "2.1.0",
+		"ora": "3.0.0",
+		"per-env": "1.0.2",
+		"redrun": "7.0.3",
+		"replace-in-file": "3.4.3",
+		"upath": "1.1.0",
+		"user-meta": "1.0.0"
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged",
-			"commit-msg": "commitlint -e $GIT_PARAMS"
-		}
+	"devDependencies": {
+		"@commitlint/cli": "7.2.1",
+		"@commitlint/config-conventional": "7.1.2",
+		"@commitlint/lint": "7.2.1",
+		"@commitlint/prompt-cli": "7.5.0",
+		"clear-require": "3.0.0",
+		"husky": "1.3.1",
+		"lint-staged": "8.1.4",
+		"nyc": "13.3.0",
+		"prettier": "1.15.2",
+		"sort-package-json": "1.19.0",
+		"updates": "7.1.1",
+		"xo": "0.24.0"
+	},
+	"engines": {
+		"node": ">=8"
 	}
 }
